fix dark mode link color

--- a/website/css/docs/style.css
+++ b/website/css/docs/style.css
@@ -32,6 +32,10 @@ html, body {
         'menu footer footer footer footer';
 }
 
+.docs-link {
+    color: blue;
+}
+
 .logo {
     width: 60%;
     height: auto;
